- update ubuntu image tags for platform - starting work on ThreeDSuite
Signed-off-by: David L. Armstrong <1403560+daversomethingsomething@users.noreply.github.com>

--- a/.github/workflows/conan-demoToolchain.yml
+++ b/.github/workflows/conan-demoToolchain.yml
@@ -52,9 +52,9 @@ jobs:
       conan_recipe_remote: ${{ inputs.conan_recipe_remote }}
       toolchain_prefix: ${{ inputs.toolchain_prefix }}
       ubuntu-aarch64-enabled: "${{ inputs.ubuntu-aarch64-enabled }}"
-      ubuntu-aarch64-image: "nexus.homelab/conan-bootstrap-ubuntu:latest"
+      ubuntu-aarch64-image: "nexus.homelab/conan-bootstrap-ubuntu:aarch64-latest"
       ubuntu-x86_64-enabled: ${{ inputs.ubuntu-x86_64-enabled }}
-      ubuntu-x86_64-image: "nexus.homelab/conan-bootstrap-ubuntu:latest"
+      ubuntu-x86_64-image: "nexus.homelab/conan-bootstrap-ubuntu:aarch64-latest"
       almalinux-aarch64-enabled: "${{ inputs.almalinux-aarch64-enabled }}"
       almalinux-aarch64-image: "nexus.homelab/conan-bootstrap-almalinux:aarch64-latest"
       almalinux-x86_64-enabled: ${{ inputs.almalinux-x86_64-enabled }}
@@ -73,9 +73,9 @@ jobs:
       conan_recipe_remote: ${{ inputs.conan_recipe_remote }}
       toolchain_prefix: ${{ inputs.toolchain_prefix }}
       ubuntu-aarch64-enabled: "${{ inputs.ubuntu-aarch64-enabled }}"
-      ubuntu-aarch64-image: "nexus.homelab/conan-bootstrap-ubuntu:latest"
+      ubuntu-aarch64-image: "nexus.homelab/conan-bootstrap-ubuntu:aarch64-latest"
       ubuntu-x86_64-enabled: ${{ inputs.ubuntu-x86_64-enabled }}
-      ubuntu-x86_64-image: "nexus.homelab/conan-bootstrap-ubuntu:latest"
+      ubuntu-x86_64-image: "nexus.homelab/conan-bootstrap-ubuntu:aarch64-latest"
       almalinux-aarch64-enabled: "${{ inputs.almalinux-aarch64-enabled }}"
       almalinux-aarch64-image: "nexus.homelab/conan-bootstrap-almalinux:aarch64-latest"
       almalinux-x86_64-enabled: ${{ inputs.almalinux-x86_64-enabled }}
@@ -95,9 +95,9 @@ jobs:
       conan_recipe_remote: ${{ inputs.conan_recipe_remote }}
       toolchain_prefix: ${{ inputs.toolchain_prefix }}
       ubuntu-aarch64-enabled: "${{ inputs.ubuntu-aarch64-enabled }}"
-      ubuntu-aarch64-image: "nexus.homelab/conan-base-ubuntu:latest"
+      ubuntu-aarch64-image: "nexus.homelab/conan-base-ubuntu:aarch64-latest"
       ubuntu-x86_64-enabled: ${{ inputs.ubuntu-x86_64-enabled }}
-      ubuntu-x86_64-image: "nexus.homelab/conan-base-ubuntu:latest"
+      ubuntu-x86_64-image: "nexus.homelab/conan-base-ubuntu:aarch64-latest"
       almalinux-aarch64-enabled: "${{ inputs.almalinux-aarch64-enabled }}"
       almalinux-aarch64-image: "nexus.homelab/conan-base-almalinux:aarch64-latest"
       almalinux-x86_64-enabled: ${{ inputs.almalinux-x86_64-enabled }}
