Misc updates and refinements
Signed-off-by: David L. Armstrong <1403560+daversomethingsomething@users.noreply.github.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,8 @@
 // For format details, see https://aka.ms/devcontainer.json.
 {
   "name": "Base OS with Python3 and Git",
-//  "image": "ghcr.io/daversomethingsomethingorg/conan-ubuntu:aarch64-latest",
-//  "image": "ghcr.io/daversomethingsomethingorg/conan-almalinux:aarch64-latest",
-  "image": "nexus.homelab/conan-docker-build-almalinux:aarch64-latest",
+  "image": "nexus.homelab/conan-docker-build-ubuntu:aarch64-latest",
+//  "image": "nexus.homelab/conan-docker-build-almalinux:aarch64-latest",
 
 // feature support is for ubuntu/debian (uses apt-get, etc) apparently...
 /*
