Replace `conan_center_remote` with `conan_center_proxy`, `conan_local_recipes`, and `conan_local_repo`.
Signed-off-by: David L. Armstrong <1403560+daversomethingsomething@users.noreply.github.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 // For format details, see https://aka.ms/devcontainer.json.
 {
-  "name": "Base OS with Python3 and Git",
+  "name": "Maxed-out base image",
   "image": "nexus.homelab/conan-docker-build-ubuntu:aarch64-latest",
 //  "image": "nexus.homelab/conan-docker-build-almalinux:aarch64-latest",
 
