--- a/.github/workflows/conan-demoToolchain.yml
+++ b/.github/workflows/conan-demoToolchain.yml
@@ -61,6 +61,7 @@ jobs:
   toolchain_phase1:
     uses: DaverSomethingSomethingOrg/conan-github-workflows/.github/workflows/conan-multiPlatformToolchain.yml@main
     secrets: inherit
+    needs: bootstrap_container_image
     with:
       component_subdirectory: "components/phase1"
       save_cache_prefix: "toolchain_phase1-${{ github.run_id }}"
@@ -129,6 +130,7 @@ jobs:
   build_container_image:
     uses: DaverSomethingSomethingOrg/conan-build-container/.github/workflows/conan-build-container.yml@main
     secrets: inherit
+    needs: toolchain_phase3
     with:
       enable_build_images: true
       container_push: true
