We need to trigger `conan-build-container` not try to reuse it
Signed-off-by: David L. Armstrong <1403560+daversomethingsomething@users.noreply.github.com>

--- a/.github/workflows/conan-demoToolchain.yml
+++ b/.github/workflows/conan-demoToolchain.yml
@@ -45,23 +45,57 @@ on:
         default: false
 
 jobs:
-  bootstrap_container_image:
-    uses: DaverSomethingSomethingOrg/conan-build-container/.github/workflows/conan-build-container.yml@main
+  trigger_bootstrap_container_image:
+    runs-on: ${{ inputs.runer_selection-x86_64 }}
+#    container:
+#      image: "nexus.homelab/conan-build-ubuntu:aarch64-latest"
+#      credentials:
+##        username: ${{ github.actor }}
+##        password: ${{ secrets.GITHUB_TOKEN }}
+#        username: ${{ vars.NEXUS_CI_USER }}
+#        password: ${{ secrets.NEXUS_CI_PASSWORD }
     secrets: inherit
-    with:
-      enable_build_images: false
-      container_push: true
-      almalinux-aarch64-enabled: ${{ inputs.almalinux-aarch64-enabled }}
-      almalinux-x86_64-enabled: ${{ inputs.almalinux-x86_64-enabled }}
-      ubuntu-aarch64-enabled: ${{ inputs.ubuntu-aarch64-enabled }}
-      ubuntu-x86_64-enabled: ${{ inputs.ubuntu-x86_64-enabled }}
-      runner_selection-aarch64: ${{ inputs.runner_selection-aarch64 }}
-      runner_selection-x86_64: ${{ inputs.runner_selection-x86_64 }}
+    steps:
+    - name: Trigger Conan Bootstrap Container Builds
+#      if: ${{ inputs.trigger_container_builds }}
+      uses: the-actions-org/workflow-dispatch@v4
+      with:
+        wait-for-completion: true
+        token: ${{ secrets.MY_GH_TOKEN }}
+        workflow: conan-build-container.yml
+        repo: DaverSomethingSomethingOrg/conan-build-container
+        ref: main
+        inputs: |
+          { "enable_build_images": false,
+            "container_push": true,
+            "almalinux-aarch64-enabled": "${{ inputs.almalinux-aarch64-enabled }}",
+            "almalinux-x86_64-enabled": "${{ inputs.almalinux-x86_64-enabled }}",
+            "ubuntu-aarch64-enabled": "${{ inputs.ubuntu-aarch64-enabled }}",
+            "ubuntu-x86_64-enabled": "${{ inputs.ubuntu-x86_64-enabled }}",
+            "runner_selection-aarch64": "${{ inputs.runner_selection-aarch64 }}",
+            "runer_selection-x86_64=": "${{ inputs.runer_selection-x86_64= }}"
+          }
+
+#      env:
+#        GH_TOKEN: ${{ secrets.MY_GH_TOKEN }}
+#      run: |
+#        gh workflow run \
+#          --raw-field "enable_build_images=false" \
+#          --raw-field "container_push=true" \
+#          --raw-field "almalinux-aarch64-enabled=${{ inputs.almalinux-aarch64-enabled }}" \
+#          --raw-field "almalinux-x86_64-enabled=${{ inputs.almalinux-x86_64-enabled }}" \
+#          --raw-field "ubuntu-aarch64-enabled=${{ inputs.ubuntu-aarch64-enabled }}" \
+#          --raw-field "ubuntu-x86_64-enabled=${{ inputs.ubuntu-x86_64-enabled }}" \
+#          --raw-field "runner_selection-aarch64=${{ inputs.runner_selection-aarch64 }}" \
+#          --raw-field "runer_selection-x86_64=${{ inputs.runer_selection-x86_64 }}" \
+#          --repo "DaverSomethingSomethingOrg/conan-build-container" \
+#          --ref "main" \
+#          conan-build-container.yml
 
   toolchain_phase1:
     uses: DaverSomethingSomethingOrg/conan-github-workflows/.github/workflows/conan-multiPlatformToolchain.yml@main
     secrets: inherit
-    needs: bootstrap_container_image
+    needs: trigger_bootstrap_container_image
     with:
       component_subdirectory: "components/phase1"
       save_cache_prefix: "toolchain_phase1-${{ github.run_id }}"
@@ -127,16 +161,50 @@ jobs:
       almalinux-x86_64-enabled: ${{ inputs.almalinux-x86_64-enabled }}
       almalinux-x86_64-image: "nexus.homelab/conan-base-almalinux:x86_64-latest"
 
-  build_container_image:
-    uses: DaverSomethingSomethingOrg/conan-build-container/.github/workflows/conan-build-container.yml@main
-    secrets: inherit
+  trigger_build_container_image:
     needs: toolchain_phase3
-    with:
-      enable_build_images: true
-      container_push: true
-      almalinux-aarch64-enabled: ${{ inputs.almalinux-aarch64-enabled }}
-      almalinux-x86_64-enabled: ${{ inputs.almalinux-x86_64-enabled }}
-      ubuntu-aarch64-enabled: ${{ inputs.ubuntu-aarch64-enabled }}
-      ubuntu-x86_64-enabled: ${{ inputs.ubuntu-x86_64-enabled }}
-      runner_selection-aarch64: ${{ inputs.runner_selection-aarch64 }}
-      runner_selection-x86_64: ${{ inputs.runner_selection-x86_64 }}
+    runs-on: ${{ inputs.runer_selection-x86_64 }}
+#    container:
+#      image: "nexus.homelab/conan-build-ubuntu:aarch64-latest"
+#      credentials:
+##        username: ${{ github.actor }}
+##        password: ${{ secrets.GITHUB_TOKEN }}
+#        username: ${{ vars.NEXUS_CI_USER }}
+#        password: ${{ secrets.NEXUS_CI_PASSWORD }
+    secrets: inherit
+    steps:
+    - name: Trigger Conan Build Container Builds
+#      if: ${{ inputs.trigger_container_builds }}
+      uses: the-actions-org/workflow-dispatch@v4
+      with:
+        wait-for-completion: true
+        token: ${{ secrets.MY_GH_TOKEN }}
+        workflow: conan-build-container.yml
+        repo: DaverSomethingSomethingOrg/conan-build-container
+        ref: main
+        inputs: |
+          { "enable_build_images": true,
+            "container_push": true,
+            "almalinux-aarch64-enabled": "${{ inputs.almalinux-aarch64-enabled }}",
+            "almalinux-x86_64-enabled": "${{ inputs.almalinux-x86_64-enabled }}",
+            "ubuntu-aarch64-enabled": "${{ inputs.ubuntu-aarch64-enabled }}",
+            "ubuntu-x86_64-enabled": "${{ inputs.ubuntu-x86_64-enabled }}",
+            "runner_selection-aarch64": "${{ inputs.runner_selection-aarch64 }}",
+            "runer_selection-x86_64=": "${{ inputs.runer_selection-x86_64= }}"
+          }
+
+#      env:
+#        GH_TOKEN: ${{ secrets.MY_GH_TOKEN }}
+#      run: |
+#        gh workflow run \
+#          --raw-field "enable_build_images=true" \
+#          --raw-field "container_push=true" \
+#          --raw-field "almalinux-aarch64-enabled=${{ inputs.almalinux-aarch64-enabled }}" \
+#          --raw-field "almalinux-x86_64-enabled=${{ inputs.almalinux-x86_64-enabled }}" \
+#          --raw-field "ubuntu-aarch64-enabled=${{ inputs.ubuntu-aarch64-enabled }}" \
+#          --raw-field "ubuntu-x86_64-enabled=${{ inputs.ubuntu-x86_64-enabled }}" \
+#          --raw-field "runner_selection-aarch64=${{ inputs.runner_selection-aarch64 }}" \
+#          --raw-field "runer_selection-x86_64=${{ inputs.runer_selection-x86_64 }}" \
+#          --repo "DaverSomethingSomethingOrg/conan-build-container" \
+#          --ref "main" \
+#          conan-build-container.yml
