Switch to reusing `conan-build-container` rather than triggering it.
Signed-off-by: David L. Armstrong <1403560+daversomethingsomething@users.noreply.github.com>

--- a/.github/workflows/conan-build-container.yml
+++ b/.github/workflows/conan-build-container.yml
@@ -33,6 +33,32 @@ on:
       runner_selection-x86_64:
         type: string
         default: linux-x86_64
+  workflow_call:
+    inputs:
+      enable_build_images:
+        type: boolean
+        default: true
+      almalinux-aarch64-enabled:
+        type: boolean
+        default: false
+      almalinux-x86_64-enabled:
+        type: boolean
+        default: false
+      ubuntu-aarch64-enabled:
+        type: boolean
+        default: false
+      ubuntu-x86_64-enabled:
+        type: boolean
+        default: false
+      container_push:
+        type: boolean
+        default: false
+      runner_selection-aarch64:
+        type: string
+        default: linux-aarch64
+      runner_selection-x86_64:
+        type: string
+        default: linux-x86_64
 
 jobs:
   conan-base:
